syntax = "proto3";

package CareerCloud.gRPC;


import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";



option csharp_namespace = "CareerCloud.gRPC.Protos";



service ApplicantProfileService {
	rpc GetApplicantProfile(IdRequest3) returns (ApplicantProfile);
	rpc GetApplicantProfiles(google.protobuf.Empty) returns (ApplicantProfiles);
	rpc AddApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
	rpc UpdateApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
	rpc DeleteApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
}

message IdRequest3 {
	string Id = 1;
}

message ApplicantProfile {
	string Id = 1;
	string Login = 2;	
	double CurrentSalary = 3;
	double CurrentRate = 4;
	string Currency = 5;
	string Country = 6;
	string Province = 7;
	string Street = 8;
	string City = 9;
	string PostalCode = 10;
	
}

message ApplicantProfiles {
	repeated ApplicantProfile AppProfl = 1;
}
